# near-dns

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml
.github/workflows/: build-and-push.yaml
dns-contract/: Cargo.toml
dns-contract/src/: lib.rs
dns-server/: Cargo.toml
dns-server/src/: cache.rs  main.rs  records.rs
dns-server/src/authority/: blockchain.rs  mod.rs
dns-server/src/resolver/: mod.rs  near.rs  upstream.rs
website/: Dockerfile.dev
website/src/components/footer/: footer.tsx
website/src/components/navbar/: navbar.tsx
website/src/components/sections/: activate-section.tsx  hero-section.tsx  join-section.tsx  map-section.tsx  merch-section.tsx  project-section.tsx  stats-section.tsx
website/src/routes/: index.tsx
