[workspace]
resolver = "2"
members = ["dns-server"]
# dns-contract excluded - must be built with `cargo near build` from dns-contract/
exclude = ["dns-contract"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frol/near-dns"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
